--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,7 +7,8 @@
     "dev": "storybook dev -p 6006",
     "build": "storybook build --output-dir dist",
     "lint": "eslint src/**/*.ts*",
-    "lint:fix": "eslint src/**/*.ts* --fix"
+    "lint:fix": "eslint src/**/*.ts* --fix",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "license": "MIT",
   "dependencies": {
@@ -29,6 +30,7 @@
     "@storybook/blocks": "^7.4.0",
     "@storybook/react": "^7.4.0",
     "@storybook/react-vite": "^7.4.0",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
